; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libibverbs/extr_memory.c_merge_ranges.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libibverbs/extr_memory.c_merge_ranges.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibv_mem_node = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ibv_mem_node* (%struct.ibv_mem_node*, %struct.ibv_mem_node*)* @merge_ranges to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ibv_mem_node* @merge_ranges(%struct.ibv_mem_node* %0, %struct.ibv_mem_node* %1) #0 {
  %3 = alloca %struct.ibv_mem_node*, align 8
  %4 = alloca %struct.ibv_mem_node*, align 8
  store %struct.ibv_mem_node* %0, %struct.ibv_mem_node** %3, align 8
  store %struct.ibv_mem_node* %1, %struct.ibv_mem_node** %4, align 8
  %5 = load %struct.ibv_mem_node*, %struct.ibv_mem_node** %3, align 8
  %6 = getelementptr inbounds %struct.ibv_mem_node, %struct.ibv_mem_node* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.ibv_mem_node*, %struct.ibv_mem_node** %4, align 8
  %9 = getelementptr inbounds %struct.ibv_mem_node, %struct.ibv_mem_node* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.ibv_mem_node*, %struct.ibv_mem_node** %3, align 8
  %11 = getelementptr inbounds %struct.ibv_mem_node, %struct.ibv_mem_node* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.ibv_mem_node*, %struct.ibv_mem_node** %4, align 8
  %14 = getelementptr inbounds %struct.ibv_mem_node, %struct.ibv_mem_node* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = load %struct.ibv_mem_node*, %struct.ibv_mem_node** %3, align 8
  %16 = call i32 @__mm_remove(%struct.ibv_mem_node* %15)
  %17 = load %struct.ibv_mem_node*, %struct.ibv_mem_node** %4, align 8
  ret %struct.ibv_mem_node* %17
}

declare dso_local i32 @__mm_remove(%struct.ibv_mem_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
